# e-commerce-ddd

./: README.md  pyproject.toml  sync.py  test_sync.py
e_commerce_ddd/: config.py  flask_app.py  orm.py  repository.py  services.py
e_commerce_ddd/domain/: model.py
e_commerce_ddd/service_layer/: services.py
tests/: conftest.py  test_api.py  test_services.py
tests/domain/: test_allocate.py  test_batches.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py
tests/repository/: test_repository.py
tests/unit/: test_allocate.py  test_services.py
