[tool.poetry]
name = "e-commerce-ddd"
version = "0.1.0"
description = "E-commerce project to train on DDD in Python"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "e_commerce_ddd" }]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
